--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - DB_PASSWORD=root
     ports:
       - '5000:5000'
+    networks:
+      - skillab-network
     labels:
       io.portainer.accesscontrol.teams: skillab-all
 
@@ -30,8 +32,14 @@ services:
       - ku_detection_postgresql_data:/var/lib/postgresql/data
     ports:
       - '5430:5432'
+    networks:
+      - skillab-network
     labels:
       io.portainer.accesscontrol.teams: skillab-all
+
+networks:
+  skillab-network:
+    external: true
 
 volumes:
   ku_detection_postgresql:
