Update md files

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,4 +2,6 @@ site_name: SKILLAB KU Detection
 repo_url: https://github.com/skillab-project/KU-Detection
 
 nav:
-  - KU Detection: 'index.md'
+  - KU Detection:
+    - General Info: 'index.md'
+    - Testing: 'tests.md'
