--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python application
 
 on:
@@ -8,7 +5,7 @@ on:
     branches: [ "main" ]
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   build:
@@ -28,8 +25,8 @@ jobs:
     - name: Get model
       run: |
         # Install Git LFS from the official source
-        curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | bash
-        apt-get install -y git-lfs
+        curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | sudo bash
+        sudo apt-get install -y git-lfs
         git lfs install --skip-repo
         # Get model
         mkdir -p models/codebert && \
