--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -24,43 +24,20 @@ pipeline {
             }
         }
 
-        // ****************************
-        // *** Push Images In Harbor ***
-        // ****************************
-        stage("Push_Image"){
-            when {
-                environment name: "GIT_BRANCH", value: "origin/main"
-            }
-            steps {
-                withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: "${DOCKER_REG_CREDS}", usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]){
-                    echo "***** Push Docker Image *****"
-                    sh 'docker compose build'
-                    sh 'docker login ${DOCKER_REG} -u ${USERNAME} -p ${PASSWORD}'
-                    sh 'docker image push ${DOCKER_REG}${DOCKER_REPO}${APP_NAME}:${DOCKER_TAG}'
-                    sh 'DOCKER_TAG="latest" docker compose build'
-                    sh 'docker image push ${DOCKER_REG}${DOCKER_REPO}${APP_NAME}:latest'
-                }
-            }
-        }
-        
-        // **************
-        // *** Deploy ***
-        // **************
-        stage("Deployment"){
-            when {
-                environment name: "GIT_BRANCH", value: "origin/main"
-            }
 
+        // *************************
+        // ***  UNIT TEST STAGE  ***
+        // *************************
+        stage("Unit_Tests"){
             steps {
-                withCredentials([[$class: 'UsernamePasswordMultiBinding', credentialsId: "${DOCKER_REG_CREDS}", usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD']]){
-                    echo "***** Deploy Application *****"
-                    sh 'docker login ${DOCKER_REG} -u ${USERNAME} -p ${PASSWORD}'
-                    sh 'docker compose pull'
-                    sh 'docker compose up -d'
-                    sh 'docker ps'
-                }
+                echo "***** Running Unit Tests *****"
+                sh 'docker compose build'
+                sh 'docker compose up -d'
+                sh 'sleep 10'
+                sh 'docker compose exec -it ku-detection-backend python -m unittest api.test_routes'
             }
         }
+
     }
     post{
         failure{
